# nid-industry-interface

./: .dependency-cruiser.cjs  .gitignore  .npmrc  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DEMO.md  DEPLOY.md  REFERENCES.md  SECURITY.md  SKILLS.md  eslint.config.mjs  lefthook.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  vercel.json
.claude/: launch.json
.gcc/: changelog.md  commit.md  index.yaml  metadata.yaml  session-memory.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
apps/web/: .env.example  globals.d.ts  instrumentation-hydrate.ts  instrumentation.ts  middleware.ts  next.config.ts  package.json  tsconfig.json
docs/: repo-hardening.md
modules/admin-accountability/: AGENTS.md  CLAUDE.md  CONTEXT.md  REFERENCES.md  SKILLS.md  package.json  tsconfig.json
modules/admin-cms/: AGENTS.md  CLAUDE.md  CONTEXT.md  REFERENCES.md  SKILLS.md  package.json
modules/candidate-browse/: AGENTS.md  CLAUDE.md  CONTEXT.md  REFERENCES.md  SKILLS.md  package.json
modules/interview-console/: AGENTS.md  CLAUDE.md  CONTEXT.md  REFERENCES.md  SKILLS.md  package.json
modules/jd-posting/: AGENTS.md  CLAUDE.md  CONTEXT.md  REFERENCES.md  SKILLS.md  package.json
modules/offer-cascade/: AGENTS.md  CLAUDE.md  CONTEXT.md  (+4 more)
presentation/: deck.html  showcase.html
scripts/: check-boundaries.mjs  check-module-contracts.mjs
services/ml-jd-analyzer/: CLAUDE.md  CONTEXT.md  SKILLS.md  app.py  pyproject.toml
(+309 files in other folders)
