[project]
name = "nid-ml-jd-analyzer"
version = "0.1.0"
description = "NID Industry Interface — structured scope-creep classifier (ML worker behind the JdScopeAnalyzer port)."
requires-python = ">=3.13"
# The demo worker uses ONLY the Python standard library (http.server) so it runs
# with `python3 app.py` — zero install. Production swaps the HTTP layer for these:
#   fastapi>=0.115  uvicorn[standard]>=0.32  pydantic>=2.9
# That is a boundary-only change; classify() is framework-free and moves unchanged.
dependencies = []

[dependency-groups]
dev = ["ruff>=0.8", "mypy>=1.13"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "T20"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
